# geometry-of-relativity

./: .env.example  .gitignore  FIGURE_MANIFEST.md  LICENSE  Makefile  README.md  pyproject.toml
circuit/results/: p2e_alpha_sweep_gemma2-2b_height_k15.json  p2e_alpha_sweep_gemma2-2b_height_k1_refk15.json  p2e_alpha_sweep_gemma2-2b_height_k5_refk15.json  p2e_alpha_sweep_gemma2-9b_height_k15.json  p2e_alpha_sweep_gemma2-9b_height_k1_refk15.json  p2e_alpha_sweep_gemma2-9b_height_k5_refk15.json  p2f_arclength_alpha_sweep_gemma2-9b_height_k15.json  p2f_arclength_alpha_sweep_gemma2-9b_height_k1_refk15.json  p2f_arclength_alpha_sweep_gemma2-9b_height_k5_refk15.json  p2f_xfeat_steering_gemma2-9b_refheight_evalweight_k15.json  p2m_alignment_gemma2-9b_fullgrid.json  p2o_attention_modes_gemma2-2b_bycos_positive.json  p2o_attention_modes_gemma2-2b_bydla.json  p2o_attention_modes_gemma2-2b_bydla_positive.json  p2o_attention_modes_gemma2-2b_byresidcos_positive.json  p2o_attention_modes_gemma2-9b_bydla_positive.json  p2o_attention_modes_gemma2-9b_byresidcos_positive.json  p2o_n_sweep_gemma2-2b_positive_cos_phase.json  p2o_n_sweep_gemma2-2b_positive_dla.json  p2o_n_sweep_gemma2-2b_positive_dla_phase.json  (+33 more)
config/: __init__.py  models.py
data_gen/: __init__.py  prompts.py
experiments/: b4_trio_ablation_naturalistic.py  pilot_naturalistic_ld.py
extract/: PIPELINE.md  run_v15_shared_direction_loo.py
figures/: build_circuit_figures.py  build_p2a_kshot_2x3.py  build_paper_result_figures.py  build_shared_direction_figure.py
paper/: main.tex  references.bib
tests/: test_prompts.py
(+48 files in other folders)
