[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geometry-of-relativity"
version = "0.1.0"
description = "Context-relative scalar representations in LLMs (gradable adjectives): code & reproducibility"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.2",
    "transformers>=4.45",
    "accelerate>=0.33",
    "safetensors>=0.4",
    "huggingface-hub>=0.25",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "black>=24.0",
]

[tool.setuptools.packages.find]
include = ["config*", "data_gen*"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
